@@ -39,8 +39,8 @@ sources = GException.cpp \
           GFilename.cpp \
           GDaemon.cpp
 
-
 # Build libtool library
 noinst_LTLIBRARIES = libsupport.la
 libsupport_la_SOURCES = $(sources)
 libsupport_la_LDFLAGS =
+
